--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pelican-plugins"]
 	path = pelican-plugins
 	url = git@github.com:getpelican/pelican-plugins.git
+[submodule "themes/Flex"]
+	path = themes/Flex
+	url = git@github.com:alexandrevicenzi/Flex.git
